--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -53,6 +53,7 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
+main.class=com.kreadi.swing.KTable
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=true
 platform.active=default_platform
